* NEW: Added the Translator field as per the anansi-project/comicinfo.
* NEW: The Preference dialog is now resizable and is remembered by the Workspace system.
* NEW: Added a Delete API setting in the ComicRack.ini that let's you change which API is used to move files to the recycle bin. (See ComicRack.ini)


* CHANGE: Program renamed to Community Edition, this means that a new config folder will be used %appdata%\cYo\ComicRack Community Edition.
* CHANGE: Removed Android Validation of APK signature to enable compatilibity with cracked version.
* CHANGE: Updated default sort to be natural sorting (numeric).
* CHANGE: Switched MySQl library to MySQLConnector for better speed & compatibility with MariaDB (Yes current versions work).
* CHANGE: Alternate config (-ac) can now be used with portable mode (UseLocalSettings) (-local).
* CHANGE: The default docking mode is now Fill, instead of Bottom.
* CHANGE: Improved performances while handling Tar files (by Apiweb).
* CHANGE: The field Tags is now saved inside the ComicInfo.xml.
* CHANGE: ParallelConversions now maxes out at the number of processor (was hardcoded at 8 previously).
* CHANGE: Made News window bigger and replaced it with commit histtory from GitHub.
* CHANGE: Replaced the ComicRack.ini setting of "DisableGhostscript" by "PdfEngineToUse", choosing between Pdfium, Native & Ghostscript.
* CHANGE: Values for Maximum Memory now have a bigger possible range. Unlimited is unchanged.
* CHANGE: The magnifing glass can now be twice as big as before (512 x 512 => 1024 x 1024)
* CHANGE: Series: Gaps will take into consideration range of numbers (Ex: 5 - 10)
* CHANGE: Changed the default method for resizing thumbnails changed from FastBilinear (Bilinear) to FastAndUgly (Nearest Neighbor). You can revert the change in ComicRack.ini. 
* CHANGE: Summaries will not contain the same artists multiple time anymore.
* CHANGE: The Search Browser will no longer remove any leading/trailing spaces.